--- a/Tennis Scores/Base.lproj/Main.storyboard
+++ b/Tennis Scores/Base.lproj/Main.storyboard
@@ -152,7 +152,7 @@
         <!--WTA View Controller-->
         <scene sceneID="HU5-2L-V1Z">
             <objects>
-                <viewController id="5Lv-bB-QXA" userLabel="WTA View Controller" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WTAViewController" id="5Lv-bB-QXA" userLabel="WTA View Controller" customClass="WTAViewController" customModule="Tennis_Scores" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lBB-ui-SJM">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -167,7 +167,7 @@
                                             <color key="baseForegroundColor" systemColor="systemPurpleColor"/>
                                         </buttonConfiguration>
                                         <connections>
-                                            <action selector="playersButtonTapped:" destination="kXk-L9-Oe6" eventType="touchUpInside" id="0VC-sT-BzR"/>
+                                            <action selector="WTAPlayersButtonTapped:" destination="5Lv-bB-QXA" eventType="touchUpInside" id="hs0-42-1j9"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JGb-3m-n7c">
@@ -177,7 +177,7 @@
                                             <color key="baseForegroundColor" systemColor="systemPurpleColor"/>
                                         </buttonConfiguration>
                                         <connections>
-                                            <action selector="rankingButtonTapped:" destination="kXk-L9-Oe6" eventType="touchUpInside" id="WJg-Bx-DVy"/>
+                                            <action selector="WTARankingButtonTapped:" destination="5Lv-bB-QXA" eventType="touchUpInside" id="6Lz-nI-gPA"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jxF-i4-eVC">
@@ -187,7 +187,7 @@
                                             <color key="baseForegroundColor" systemColor="systemPurpleColor"/>
                                         </buttonConfiguration>
                                         <connections>
-                                            <action selector="tournamentsButtonTapped:" destination="kXk-L9-Oe6" eventType="touchUpInside" id="MXf-gc-NIF"/>
+                                            <action selector="WTATournamentsButtonTapped:" destination="5Lv-bB-QXA" eventType="touchUpInside" id="Btt-eu-Kz2"/>
                                         </connections>
                                     </button>
                                 </subviews>
